# fastapi-upload-files

./: .coveragerc  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/domain/contracts/: __init__.py  boleto_repository.py  file_import_repository.py  file_repository.py  handler.py  logging.py  mail.py  queue.py  queue_event.py  repository_factory.py  storage.py  third_party_factory.py  usecase.py
app/domain/entities/: __init__.py  boleto.py  entity.py  file.py  file_import.py  paginted_list.py
app/domain/exceptions/: entity_not_found_exception.py  file_not_found_exception.py  publish_queue_task_exception.py  upload_file_exception.py
app/domain/usecases/: __init__.py  handle_import_csv.py  handle_notify_boletos.py  import_from_csv.py  init_notify_boletos.py  list_boletos.py  list_file_imports.py
app/infra/database/: connection.py
app/infra/logging/: logging.py
app/infra/mail/: mail.py
app/infra/queue/: sqs.py
app/infra/storage/: s3.py
app/main/: main.py  queue.py
app/presentation/factories/: __init__.py  handle_import_csv_factory.py  handle_notify_boletos_factory.py  init_notify_boletos_factory.py  list_boleto_factory.py  list_file_import_factory.py  repository_factory.py  sqs_handler_factory.py  third_party_factory.py  upload_from_csv_factory.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: insomnia.json
sql/: 01.sql  02.sql  03.sql  execute-manual.sql
tests/: conftest.py
tests/domain/usecases/: handle_import_csv_test.py  (+5 more)
tests/helpers/: fake_aws_client.py  fake_database.py  generate_entities.py
(+19 files in other folders)
