[tool.poetry]
name = "backend"
version = "0.1.0"
description = "kanastra test backend"
authors = ["Hítallo William <hitallo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
