[tool.poetry]
name = "backend"
version = "0.1.0"
description = "kanastra test backend"
authors = ["Hítallo William <hitallo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
boto3 = "^1.34.83"
schedule = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
faker = "^24.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
